--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/montserrat": "^5.2.5",
+    "libphonenumber-js": "^1.12.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
